--- a/src/note.html
+++ b/src/note.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <script src="https://play.workadventu.re/iframe_api.js"></script>
-        <script type="module" src="./note.ts"></script>
+        <script type="module" src="/src/note.ts"></script>
     </head>
 
     <body>
