--- a/src/note.html
+++ b/src/note.html
@@ -6,5 +6,6 @@
     </head>
 
     <body>
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=Vm-J1IAR65J3SlRM&autoplay=1&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </body>
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=Vm-J1IAR65J3SlRM&autoplay=1&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+    </body>
 </html>
